fix: last element in interactive page outline hidden by footer
fixes #197

--- a/doxygen-awesome.css
+++ b/doxygen-awesome.css
@@ -1351,7 +1351,7 @@ div.toc li a.aboveActive {
 }
 
 #page-nav ul.page-outline {
-    margin: 0;
+    margin: 0 0 30px 0;
     padding: 0;
 }
 
